# BrazucaTalks

./: .gitignore  README.md  pyproject.toml
data/: pedagogical_data.json
frontend/: package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/public/models/: tutor_animation.glb  tutor_animation_1.glb  tutor_animation_2.glb
frontend/src/: .index.css.kate-swp  App.tsx  index.css  ts
frontend/src/components/canvas/: Avatar.tsx  Experience.tsx
frontend/src/components/chat/: ChatInput.tsx  MessageBubble.tsx  MessageList.tsx
frontend/src/hooks/: useVoiceRecorder.ts
frontend/src/services/: api.ts
frontend/src/store/: useTutorStore.ts
frontend/src/types/: chat.ts
src/app/: main.py
src/app/api/: deps.py
src/app/api/routes/: audio.py  chat.py
src/app/core/: config.py  logging.py
src/app/prompts/: templates.py
src/app/rag/: ingest_data.py  retriever.py
src/app/schemas/: chat.py
src/app/services/: audio.py  cache.py  chat.py  llm.py  memory.py  router.py
src/app/utils/: converter.py
src/test/: check_system.py
